CSS touchups * fix captions veering right on mobile and within notes * fix captions and images spilling out to the right on mobile

--- a/src/assets/css/global.sass
+++ b/src/assets/css/global.sass
@@ -239,6 +239,7 @@ input[type=range]
   img
     padding: 0
     @extend ._slab
+    max-width: 100%
 
     &.--small
       height: 225px
@@ -257,7 +258,7 @@ input[type=range]
       font-style: italic
       font-size: 0.9em
       display: block
-      width: $column-width
+      max-width: $column-width
       padding: 0
 
   > .--fullwidth
